--- a/www/templates/mylearning/modal.html
+++ b/www/templates/mylearning/modal.html
@@ -1,7 +1,7 @@
 <ion-view view-title="{{cortexLogo}}">
     <ion-content class="mylearning-wrapper">
         <div class="main-title">My Learning</div>
-        <div class="sub-title">Broadband Premise Installation Fundamental</div>
+        <div class="sub-title">{{modulename}}</div>
         <div class="card cards" ng-repeat="item in items">
             <div ng-if="item.type == 'video'" class="media-video">
                 <!-- <div class="type">{{item.type}} <span ng-if="item.type != 'pdf'">:</span> {{item.duration}}</div> -->
