--- a/www/css/style3.css
+++ b/www/css/style3.css
@@ -1,108 +1,108 @@
 /* shesh */
 
-/*****************my events styling starts*****************/
-
-.my-events .subheader-tabs {
-    line-height: 15px;
-    text-align: center;
-    color: #000000;
+/*****************Discover Evetns styling****************/
+.discover-wrapper .events {
+    position: relative;
+    background-color: #DCDDDF;
 }
 
-.my-events .subheader-tabs .tab-item {
-    border-width: 0 0 2px 0;
-    border-color: royalblue;
-    font-family: 'Helvetica Neue';
-    text-align: center;
+.discover-wrapper .events .heading {
+    padding-left: 18px;
+    padding-top: 5px;
+    text-transform: uppercase;
+    font-size: 12pt;
+    color: #9fa4a6;
+    font-family: 'Helvetica Neue Light';
 }
 
-.my-events .scroll-content {
-    top: 120px;
+.discover-wrapper .events .see-all {
+    position: absolute;
+    top: 0px;
+    right: 5px;
+    padding-right: 15px;
+    padding-top: 7px;
 }
 
-/*.my-events .padding {
-  padding: 5px;
-}*/
-
-.my-events .event-details {
-  padding: 2px;
-  margin: 10px;
-  background-color: white;
+.discover-wrapper .events .events-list {
+    border: 3px solid #E8E8E8;
+    padding: 15px;
+    background-color: #FFFFFF;
+    margin-left: 20px;
+    margin-right: 20px;
 }
 
-.resource .event-details .eventindiv{
+.discover-wrapper .events .eventindiv{
   background-color: white;
   border: 1px solid white;
   margin: 7px 20px;
   padding:  0px;
 }
 
-.my-events .event-details .date-box {
+.discover-wrapper .events .eventindiv .date-box {
   position: relative;
   width: 50px;
 }
 
-.my-events .event-details div {
-  display: inline-block;
+.discover-wrapper .events .eventindiv div {
+  /* display: inline-block; */
+}
+
+.discover-wrapper .events .eventindiv .text-box {
+    padding: 0 10px;
+    padding-left: 35px;
 }
 
 
-.my-events .event-details .date-box .date {
+.discover-wrapper .events .eventindiv .date-box .date {
     position: absolute;
-    top: 31px;
-    left: 23px;
+    top: 13px;
+    left: 17px;
     font-weight: bold
 }
 
-.my-events .event-details .date-box .month {
+.discover-wrapper .events .eventindiv .date-box .month {
   text-transform: uppercase;
     position: absolute;
-    top: 56px;
-    left: 15px;
-    font-size: 9px;
+    top: 35px;
+    left: 14px;
+    font-size: 10px;
     color: #fff;
     font-weight: bold;
 }
 
-
-.my-events .event-details .eventindiv .date-box img {
-  width: 55px;
-    height: 84px;
+.discover-wrapper .events .eventindiv .date-box img {
+  width: 50px;
 }
 
-.my-events .event-details .event-date {
-    text-align: center;
-    background-color: #0099FF;
-    height: 75px;
-    width: 80px;
-    /*line-height: 20px;
-    padding: 25px 0px 0px 0px;*/
+.discover-wrapper .events .eventindiv .bg {
+background-image: url(./svg/img_calendar.svg);
 }
 
-.my-events .event-details .event-date h5 {
-  color: #0099FF;
+.discover-wrapper .topic{
+  background-color: #F3F3F3;
+    color: #BEBEBE;
+    padding-left: 24px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    top: 13px;
+    font-size: 15px;
+    font-weight: bold
 }
 
-.my-events .event-details .circle {
-    border-radius: 100%;
-    background-color: #FFFFFF;
-    /*height: 30px;
-    width: 30px;
-    line-height: 52px;
-    padding: 10px 10px;*/
-    height: 40px;
-    width: 40px;
-    line-height: 40px;
-    padding: 10px 5px;
-}
+.video-containerYoutube {
+    position: relative;
+    padding-bottom: 56.25%;
+     height: 0; overflow: hidden;
 
-/*.my-events .event-details .circle .text {
-  padding-top: 10px;
 }
-*/
-.my-events .myevents-calendar {
+ 
+.video-containerYoutube iframe, .video-container object, .video-container embed {
+    position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
-    background-color: #0099FF;
-    height: 50px;
+    height: 100%;
 }
 
-/*****************my events styling ends****************/
+
+/*****************Discover Evetns styling ends****************/
