--- a/www/templates/applibrary/applibrary.html
+++ b/www/templates/applibrary/applibrary.html
@@ -1,60 +1,38 @@
 <ion-view view-title="{{cortexLogo}}" class="app-library">
-    <ion-nav-buttons side="secondary">
-        <i class="button ion-search" ng-click=""></i>
-    </ion-nav-buttons>
-    <ion-content class="padding">
-        <h5 class="text">APP LIBRARY</h5>
-        <p>Lorem ipsum dolo sitamt, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo.</p>
-        <ion-scroll class="scroll-category">
-            <div class="category">
-                <h5>CATEGORY 1</h5>
-                <!--  <a href="" class="category-see-all">See All &gt;</a> -->
-                <div>
-                    <table>
-                        <tr>
-                            <td ng-repeat="category in category1">
-                                <a href="" class="app-category"><img ng-src="{{category.game}}">
-                                    <p class="text">{{category.game_title}}</p>
-                                </a>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
+  <ion-nav-buttons side="secondary">
+    <img ng-click="redirectDisover()" src="img/svg/icon_search_grey.svg" class="icon-my-learning-search" />
+  </ion-nav-buttons>
+  <ion-content class="padding">
+    <h5 class="text">APP LIBRARY</h5>
+    <p>Lorem ipsum dolo sitamt, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus
+      accumsan et viverra justo commodo.</p>
+
+
+    <div class="list">
+      <div ng-repeat="item in appList">
+        <div ng-if="item.os == platform">
+          <div class="item item-divider" ng-show="item.type == 'separator'">
+            <h2><b>{{item.title}}</b></h2>
+          </div>
+
+
+          <div class="item item-thumbnail-left" ng-show="item.type != 'separator' && item.os==platform" ng-click="openPage(item.url)">
+            <img ng-src="{{item.coverimageurl}}" alt="">
+            <div class="row">
+              <div class="col">
+                <h2 class="appLib-title">{{item.title}}</h2>
+                <p class="appLib-desc">
+                  {{item.description}}
+
+                </p>
+              </div>
+
             </div>
-        </ion-scroll>
-        <ion-scroll class="scroll-category">
-            <div class="category">
-                <h5>CATEGORY 2</h5>
-                <!-- <a href="" class="category-see-all">See All &gt;</a> -->
-                <div>
-                    <table>
-                        <tr>
-                            <td ng-repeat="category in category2">
-                                <a href="" class="app-category"><img ng-src="{{category.game}}">
-                                    <p class="text">{{category.game_title}}</p>
-                                </a>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-            </div>
-        </ion-scroll>
-        <ion-scroll class="scroll-category">
-            <div class="category">
-                <h5>CATEGORY 3</h5>
-                <!-- <a href="" class="category-see-all">See All &gt;</a> -->
-                <div>
-                    <table>
-                        <tr>
-                            <td ng-repeat="category in category3">
-                                <a href="" class="app-category"><img ng-src="{{category.game}}">
-                                    <p class="text">{{category.game_title}}</p>
-                                </a>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-            </div>
-        </ion-scroll>
-    </ion-content>
+          </div>
+
+        </div>
+      </div>
+      <!-- ng-repeat -->
+    </div>
+  </ion-content>
 </ion-view>
