--- a/www/templates/discover/search-results.html
+++ b/www/templates/discover/search-results.html
@@ -2,8 +2,8 @@
     <ion-nav-buttons side="secondary">
         <table class="search-results-wrapper">
             <tr class="header-bar-icns">
-                <td ng-click="openSort()"><img src="img/svg/icon_sort.svg" alt="sort" class="icon-sort"></td>
-                <td ng-click="openFilter()"><img src="img/svg/icon_filter.svg" alt="filter" class="icon-filter"></td>
+                <td ng-click="showSortSlider()"><img src="img/svg/icon_sort.svg" alt="sort" class="icon-sort"></td>
+                <td ng-click="showFilterSlider()"><img src="img/svg/icon_filter.svg" alt="filter" class="icon-filter"></td>
             </tr>
         </table>
     </ion-nav-buttons>
