--- a/www/templates/resource/SCTEstd.html
+++ b/www/templates/resource/SCTEstd.html
@@ -1,20 +1,44 @@
 <ion-view view-title="{{cortexLogo}}">
     <ion-content class="mylearning-wrapper">
-        <div class="events">
-            <h4 class="heading">SCTE standards</h4>
-            <ion-list>
-                <div class="inprogress-course">
-                    <ion-list>
-                        <div ng-repeat="inprogressCourse in scteStandards">
-                            <ion-item class="item-stable course-list">
-                                <div class="scteStd-doc-img-container"><img class="scteStd-doc-img" ng-src="{{inprogressCourse.image}}"></div>
-                                <div class="scteStd-doc-desc-container"><a href="" class="scte-std-title"> {{inprogressCourse.scteDocName}} </a>
-                                    <div class="scte-std-description"> {{inprogressCourse.scteDocInfo}} </div>
+        <div class="resource">
+            <div class="scte1">
+                <h4 class="heading1">SCTE STANDARDS</h4>
+                <div id='searchbar' class="row searchinput">
+                    <div class="col col-center">
+                        <label class="item item-input searchbox">
+					<i class="icon ion-ios-search placeholder-icon"></i>
+					<input type="search" placeholder="Search for a keyword" ng-model="searchString" ng-change="searchTextDidChange()">
+				</label>
+                    </div>
+                </div>
+                <ion-list>
+                    <!-- <div class="inprogress-course"> -->
+                    <div class="list">
+                        <div ng-repeat="item in standards | filter:searchString track by $index" ng-click="openURL(item.url)">
+                            <ion-item class="item-stable scte-list1">
+                                <div class="row">
+                                    <div>
+                                        <div class="row">
+                                            <a ng-click="openURL(standard.url)"> {{item.identifier}}  </a>
+                                        </div>
+                                        <div class="row break">{{item.title}}</div>
+                                        
+                                    </div>
+                                    <div class="arrow1"><img src="svg/icon_arrow.svg" /></div>
                                 </div>
                             </ion-item>
                         </div>
-                    </ion-list>
-                </div>
-            </ion-list>
+                    </div>
+
+                    <!--<div class="item item-icon-left" ng-repeat="item in standards | filter:searchString track by $index" ng-click="openPage(item.url)">
+                        <i class="icon ion-document"></i>
+                        <h2>{{item.identifier}}</h2>
+                        <p>{{item.title}}</p>
+                    </div>-->
+
+                </ion-list>
+            </div>
+        </div>
+
     </ion-content>
 </ion-view>
