--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -1,22 +1,22 @@
 <ion-tabs class="tabs-icon-top tabs-color-active-positive bottom-tab">
     <!-- Discover Tab -->
-    <ion-tab title="Discover" icon-off="icon-tab-discover" icon-on="icon-tab-discover" href="#/tab/discover">
+    <ion-tab title="Discover" icon-off="tab-icon-bottom-menu_discover" icon-on="tab-icon-bottom-menu_discover" href="#/tab/discover">
         <ion-nav-view name="tab-discover@tab"></ion-nav-view>
     </ion-tab>
     <!-- My Learning Tab -->
-    <ion-tab title="My Learning" icon-off="icon-tab-my-learning" icon-on="icon-tab-my-learning" href="#/tab/mylearning">
+    <ion-tab title="My Learning" icon-off="tab-icon-bottom-menu_my-learning" icon-on="tab-icon-bottom-menu_my-learning" href="#/tab/mylearning">
         <ion-nav-view name="tab-mylearning@tab"></ion-nav-view>
     </ion-tab>
     <!-- Tech tips Tab -->
-    <ion-tab title="Tech Tips" icon-off="icon-tab-tech-tips" icon-on="icon-tab-tech-tips" href="#/tab/techtips">
+    <ion-tab title="Tech Tips" icon-off="tab-icon-bottom-menu_techtips" icon-on="tab-icon-bottom-menu_techtips" href="#/tab/techtips">
         <ion-nav-view name="tab-techtips@tab"></ion-nav-view>
     </ion-tab>
     <!-- App Library Tab -->
-    <ion-tab title="Apps" icon-off="icon-tab-apps" icon-on="icon-tab-apps" href="#/tab/applibrary">
+    <ion-tab title="Apps" icon-off="tab-icon-bottom-menu_apps" icon-on="tab-icon-bottom-menu_apps" href="#/tab/applibrary">
         <ion-nav-view name="tab-applibrary@tab"></ion-nav-view>
     </ion-tab>
     <!-- Resources Tab -->
-    <ion-tab title="Resources" icon-off="icon-tab-resources" icon-on="icon-tab-resources" href="#/tab/resource">
+    <ion-tab title="Resources" icon-off="tab-icon-bottom-menu_resources" icon-on="tab-icon-bottom-menu_resources" href="#/tab/resource">
         <ion-nav-view name="tab-resource@tab"></ion-nav-view>
     </ion-tab>
 </ion-tabs>
