--- a/www/templates/mylearning/games.html
+++ b/www/templates/mylearning/games.html
@@ -2,9 +2,10 @@
     <ion-content class="mylearning-wrapper">
         <div class="card cards" ng-repeat="gameItem in gameItems">
             <div class="game-title">{{gameItem.title}}</div>
-            <div><img class="game-image" src="img/u48.png"></div>
+            <div class="game-image"><img src="img/u48.png"></div>
             <div class="game_description">{{gameItem.description}}</div>
-            <div class="game-play-button">Play Now</div>
+            <div style="text-align:center;"><button class="game-play-button">Play Now</button>
+            </div>
         </div>
     </ion-content>
 </ion-view>
