--- a/www/templates/resource/SCTEstd.html
+++ b/www/templates/resource/SCTEstd.html
@@ -6,9 +6,9 @@
                 <div id='searchbar' class="row searchinput">
                     <div class="col col-center">
                         <label class="item item-input searchbox">
-					<i class="icon ion-ios-search placeholder-icon"></i>
-					<input type="search" placeholder="Search for a keyword" ng-model="searchString" ng-change="searchTextDidChange()">
-				</label>
+                            <i class="icon ion-ios-search placeholder-icon"></i>
+                            <input type="search" placeholder="Search for a keyword" ng-model="searchString" ng-change="searchTextDidChange()">
+                        </label>
                     </div>
                 </div>
                 <ion-list>
@@ -22,23 +22,19 @@
                                             <a ng-click="openURL(standard.url)"> {{item.identifier}}  </a>
                                         </div>
                                         <div class="row break">{{item.title}}</div>
-                                        
                                     </div>
-                                    <div class="arrow1"><img src="svg/icon_arrow.svg" /></div>
+                                    <div class="arrow1"><img class="scte-std-arrow" src="svg/icon_arrow.svg" /></div>
                                 </div>
                             </ion-item>
                         </div>
                     </div>
-
                     <!--<div class="item item-icon-left" ng-repeat="item in standards | filter:searchString track by $index" ng-click="openPage(item.url)">
                         <i class="icon ion-document"></i>
                         <h2>{{item.identifier}}</h2>
                         <p>{{item.title}}</p>
                     </div>-->
-
                 </ion-list>
             </div>
         </div>
-
     </ion-content>
 </ion-view>
